fixed filter pag gap

--- a/src/pages/listings/Listings.module.sass
+++ b/src/pages/listings/Listings.module.sass
@@ -26,7 +26,7 @@
     +m
         justify-content: flex-start
         padding: 0 4px
-        margin: 0 auto 16px
+        margin: 24px auto 16px
 
 .categoryNavItem
     display: flex
